# python-ci

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: code-quality.yml  demo.yaml
src/yt_uv/: __init__.py
tests/: test_main.py
