[project]
name = "yt-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.distutils.bdist_wheel]
universal = true

[tool.uv]
dev-dependencies = ["build>=1.2.1", "pytest-cov>=5.0.0", "pyright>=1.1.381"]
