[project]
name = "yt-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.distutils.bdist_wheel]
universal = true

[dependency-groups]
dev = ["pytest-cov>=5.0.0", "pyright>=1.1.381"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pyright]
exclude = [".venv"]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
